Rewriting mob drops and structure inclusions